# PrimiSketch

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md
Old/Application/: CMakeLists.txt
Old/Geometry/: BinaryFile.cpp  BinaryFile.h  BinaryFileInput.cpp  BinaryFileInput.h  Box.cpp  BrokenLine.cpp  BrokenLine.h  CMakeLists.txt  ConsoleOutputStream.cpp  ConsoleOutputStream.h  GeometryModel.h  IFigure.cpp  IFigure.h  InputStream.h  LineSegment.cpp  LineSegment.h  Matrix3.cpp  Matrix3.h  MockStream.cpp  MockStream.h  OutputStream.h  Rectangle.cpp  Rectangle.h  Vector.cpp
Source/: Main.cpp
Source/Application/: Main.cpp
Source/Core/Controllers/: CMakeLists.txt  CommandManager.cpp  CommandManager.h  CreateFigureCommand.cpp  CreateFigureCommand.h  CreateLineSegmentState.cpp  CreateLineSegmentState.h  CreatePolyLineState.cpp  CreatePolyLineState.h  CreateRectangleCenterAngleState.cpp  CreateRectangleCenterAngleState.h  CreateRectangleTwoPointsState.cpp  CreateRectangleTwoPointsState.h  DefaultState.cpp  DefaultState.h  DeleteFigureCommand.cpp  DeleteFigureCommand.h  MainController.cpp  MainController.h  MoveFigureCommand.cpp  MoveFigureCommand.h  PaintController.cpp  PaintController.h  RenderableModel.cpp  RenderableModel.h  SelectedModel.cpp  SelectedModel.h  TemporaryModel.cpp  TemporaryModel.h
Source/Core/Include/Events/: AutoBuildEvent.h  CMakeLists.txt  CompleteDrawingEvent.h  Event.h  ExportSVGEvent.h  LoadFileEvent.h  RedoEvent.h  SaveFileEvent.h  SceneDeleteEvent.h  SceneMouseEvent.cpp  SceneMouseEvent.h  ScenePaintEvent.h  SceneWheelEvent.h  ToolChangeEvent.h  UndoEvent.h
Source/Core/Include/Interfaces/: CMakeLists.txt  Color.h  EventListener.h  ICommand.h  IModel.h  IState.h  IView.h  PrimitiveView.h  RenderableProperties.h  StyleLine.h  Tool.h
Source/GUI/: CMakeLists.txt  ConstructionPanel.cpp  ConstructionPanel.h  ConstructionPanelWidget.cpp  ConstructionPanelWidget.h  EditorToolBar.cpp  EditorToolBar.h  PropertiesPanelWidget.cpp  PropertiesPanelWidget.h  QtAdapters.cpp  QtAdapters.h  QtPainter.cpp  QtPainter.h  QtView.cpp  QtView.h  SceneWidget.cpp  SceneWidget.h
Source/Geometry/: BinaryFile.cpp  BinaryFile.h  Box.h  BrokenLine.cpp  BrokenLine.h  CMakeLists.txt  ConsoleOutputStream.cpp  ConsoleOutputStream.h  GeometryModel.cpp  GeometryModel.h  IFigure.cpp  IFigure.h  InputStream.h  LineSegment.cpp  LineSegment.h  MathUtils.cpp  MathUtils.h  MockStream.cpp  MockStream.h  OutputStream.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  TestFile.cpp  TestFile.hpp  Vector.cpp  Vector.h
