# Подпроект с исполняемым файлом

# Чтобы избежать дублирования и упростить потенциальное переименование создаем
# переменную с названием цели сборки и одновременно с названием исполняемого
# файла, так как оно не задано явно. Расширение будет добавлено автоматически.
set(app_target_name "Application")

# Создаем цель сборки с исполняемым файлом
add_executable(${app_target_name})

# Указываем какие файлы необходимо включить в цель сборки. PRIVATE - относится
# только к текущей цели для сборки.
target_sources(${app_target_name} PRIVATE "Main.cpp")

# Указываем подключаемые директории - директория с текущим CMakeLists. PRIVATE -
# относится только к текущей цели для сборки.
target_include_directories(${app_target_name}
                           PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# Указываем какие библиотеки необходимо подключать к этой системе сборки.
# PRIVATE - относится только к текущей цели для сборки.
target_link_libraries(${app_target_name} PRIVATE Geometry)
